.archive/gitea/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-http
spec:
  hostnames: ["gitea.vzkn.eu"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: gitea-http
          namespace: development
          port: 3000
# ---
# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
# apiVersion: gateway.networking.k8s.io/v1
# kind: TCPRoute
# metadata:
#   name: gitea-ssh
# spec:
#   parentRefs:
#     - name: external
#       namespace: kube-system
#       sectionName: ssh  # Listener configured for port 22/TCP
#   rules:
#     - backendRefs:
#         - name: gitea
#           namespace: development
#           port: 22
